--- a/manifests/pipeline/secret.yaml
+++ b/manifests/pipeline/secret.yaml
@@ -4,19 +4,19 @@ kind: Secret
 metadata:
   name: git-auth
   annotations:
-    tekton.dev/git-0: https://github.com
+    tekton.dev/git-0: https://github.com/ZikunWang24/tek-go.git
 type: kubernetes.io/basic-auth
 stringData:
-  username: xxx
-  password: xxx
+  username: zikunwang24
+  password: wzk621524
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: docker-auth
   annotations:
-    tekton.dev/docker-0: https://registry.cn-huhehaote.aliyuncs.com
+    tekton.dev/docker-0: https://gcr.io
 type: kubernetes.io/basic-auth
 stringData:
-  username: xxx
-  password: xxx
+  username: davidwang242424@gmail.com
+  password: zocwyx-vatmuj-8xuxMi
